--- a/reactogram-fe/src/Pages/Login/Login.css
+++ b/reactogram-fe/src/Pages/Login/Login.css
@@ -1,4 +1,5 @@
 .login-container{
+    font-family: 'Poppins', sans-serif;
     margin-top:8rem;
 }
 
@@ -19,5 +20,13 @@
     border: 1px solid #b3e0ff;
     background-color: #b3e0ff;
     color: #fff;
+    padding: 14px;
+
+}
+.custom-btn-white{
+    border: 1px solid #e5e7e9;
+    background-color: #fdfeff;
+    color: #000;
+    padding: 14px;
 
 }
