--- a/reactogram-fe/src/Pages/Profile/Profile.css
+++ b/reactogram-fe/src/Pages/Profile/Profile.css
@@ -3,7 +3,22 @@
     width: 100px;
     border-radius: 50%;
 }
+.container{
+    width: 76vw !important;
+}
 
 .count-section{
     border-right: 3px solid #c3c3c3;
+}
+.custom-btn-white{
+    border: 1px solid #e5e7e9;
+    background-color: #fdfeff;
+    color: #000;
+    padding: 14px;
+
+}
+.custom-btn{
+    border-radius: 4px;
+    padding: 0.6rem;
+
 }
