My profile and logout responsive

--- a/reactogram-fe/src/Components/Navbar/Navbar.css
+++ b/reactogram-fe/src/Components/Navbar/Navbar.css
@@ -8,6 +8,11 @@
  .searchIcon{
     display: none;
  }
+ .navbar-profile-pic{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+ }
 
  @media only screen and (max-width:450px){
     .searchbox{
